--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"DIANLINGBLOG",
+    "subTitle":"点灵博客",
+    "avatarUrl":"https://110pan.xyz/api/v3/share/preview/4MCn",
     "GMEEK_VERSION":"last"
 }
